Cambiando css a scss para PrimeNg

--- a/Angular/src/app/inventario/inventario.html
+++ b/Angular/src/app/inventario/inventario.html
@@ -12,68 +12,69 @@
     <button>Buscar</button>
     
 </div>
-
-<table>
-    <thead>
-        <tr>
-            <th>CÓDIGO</th>
-            <th>X</th>
-            <th>LOTE</th>
-            <th>NOMBRE</th>
-            <th>Y</th>
-            <th>Complemento</th>
-            <th>PRECIO BASE</th>
-            <th>PRECIO VENTA</th>
-            <th>STOCK</th>
-            <th>Fecha Exp.</th>
-            <th>LABORATORIO</th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>1</td>
-            <td></td>
-            <td>12345</td>
-            <td>Ibuprofeno</td>
-            <td></td>
-            <td>Tabletas</td>
-            <td>10 Bs</td>
-            <td>15 Bs</td>
-            <td>50</td>
-            <td>2025-12-31</td>
-            <td>Lab Farma</td>
-            <td>
-                <button>Agregar</button>
-            </td>
-            <td>
-                <button>Modificar</button>
-                <button>Eliminar</button>
-            </td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td></td>
-            <td>67890</td>
-            <td>Paracetamol</td>
-            <td></td>
-            <td>Jarabe</td>
-            <td>8 Bs</td>
-            <td>12 Bs</td>
-            <td>30</td>
-            <td>2025-08-20</td>
-            <td>Lab Salud</td>
-            <td>
-                <button>Agregar</button>
-            </td>
-            <td>
-                <button>Modificar</button>
-                <button>Eliminar</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div class="containerTabla">
+    <table>
+        <thead>
+            <tr>
+                <th>CÓDIGO</th>
+                <th>X</th>
+                <th>LOTE</th>
+                <th>NOMBRE</th>
+                <th>Y</th>
+                <th>Complemento</th>
+                <th>PRECIO BASE</th>
+                <th>PRECIO VENTA</th>
+                <th>STOCK</th>
+                <th>Fecha Exp.</th>
+                <th>LABORATORIO</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td></td>
+                <td>12345</td>
+                <td>Ibuprofeno</td>
+                <td></td>
+                <td>Tabletas</td>
+                <td>10 Bs</td>
+                <td>15 Bs</td>
+                <td>50</td>
+                <td>2025-12-31</td>
+                <td>Lab Farma</td>
+                <td>
+                    <button>Agregar</button>
+                </td>
+                <td>
+                    <button>Modificar</button>
+                    <button>Eliminar</button>
+                </td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td></td>
+                <td>67890</td>
+                <td>Paracetamol</td>
+                <td></td>
+                <td>Jarabe</td>
+                <td>8 Bs</td>
+                <td>12 Bs</td>
+                <td>30</td>
+                <td>2025-08-20</td>
+                <td>Lab Salud</td>
+                <td>
+                    <button>Agregar</button>
+                </td>
+                <td>
+                    <button>Modificar</button>
+                    <button>Eliminar</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 
 <div>
     <button>Agregar Producto</button>
