--- a/Angular/src/app/detalle-venta/detalle-venta.html
+++ b/Angular/src/app/detalle-venta/detalle-venta.html
@@ -11,35 +11,38 @@
             <strong>Método de Pago:</strong> Efectivo
         </p>
     </div>
+    <div class="containerTabla">
+        <table>
+            <thead>
+                <tr>
+                    <th>Producto</th>
+                    <th>Cantidad</th>
+                    <th>Precio Unitario</th>
+                    <th>Subtotal</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Ibuprofeno</td>
+                    <td>2</td>
+                    <td>15.00</td>
+                    <td>30.00</td>
+                </tr>
+                <tr>
+                    <td>Paracetamol</td>
+                    <td>1</td>
+                    <td>12.00</td>
+                    <td>12.00</td>
+                </tr>
+                <tr>
+                    <td><strong>Total</strong></td>
+                    <td>42.00</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    
 
-    <table>
-        <thead>
-            <tr>
-                <th>Producto</th>
-                <th>Cantidad</th>
-                <th>Precio Unitario</th>
-                <th>Subtotal</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Ibuprofeno</td>
-                <td>2</td>
-                <td>15.00</td>
-                <td>30.00</td>
-            </tr>
-            <tr>
-                <td>Paracetamol</td>
-                <td>1</td>
-                <td>12.00</td>
-                <td>12.00</td>
-            </tr>
-            <tr>
-                <td><strong>Total</strong></td>
-                <td>42.00</td>
-            </tr>
-        </tbody>
-    </table>
 
     <div>
         <a href=#>
