--- a/Angular/src/app/historial-venta/historial-venta.html
+++ b/Angular/src/app/historial-venta/historial-venta.html
@@ -1,6 +1,5 @@
-<title>Historial de Facturas</title>
-<div class="contenido">
-    <h1>Historial de Ventas</h1>
+<h1>Historial de Ventas</h1>
+<div class="containerTabla">
     <table>
         <thead>
             <tr>
@@ -15,9 +14,6 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-            <td colspan="8"></td>
-        </tr>
         <tr>
             <td>1</td>
             <td>2025-09-15</td>
