--- a/Angular/src/app/ingreso-egreso/ingreso-egreso.html
+++ b/Angular/src/app/ingreso-egreso/ingreso-egreso.html
@@ -1,37 +1,38 @@
-<title>Ingresos y Egresos de Productos</title>
+
 <div class="contenido">
     <h1>Ingresos y Egresos de Productos</h1>
-    <table>
-        <thead>
+    <div class="containerTabla">
+
+        <table>
+            <thead>
+                <tr>
+                    <th>ID Producto</th>
+                    <th>Nombre</th>
+                    <th>Complemento</th>
+                    <th>Lote</th>
+                    <th>Precio Venta</th>
+                    <th>Stock Antiguo</th>
+                    <th>Stock Nuevo</th>
+                    <th>Fecha</th>
+                    <th>Hora</th>
+                    <th>Laboratorio</th>
+                </tr>
+            </thead>
+            <tbody>
+        
             <tr>
-                <th>ID Producto</th>
-                <th>Nombre</th>
-                <th>Complemento</th>
-                <th>Lote</th>
-                <th>Precio Venta</th>
-                <th>Stock Antiguo</th>
-                <th>Stock Nuevo</th>
-                <th>Fecha</th>
-                <th>Hora</th>
-                <th>Laboratorio</th>
+                <td>1</td>
+                <td>Paracetamol</td>
+                <td>Jarabe</td>
+                <td>123</td>
+                <td>3.50</td>
+                <td>6</td>
+                <td>5</td>
+                <td>2025-09-15</td>
+                <td>22:00:00</td>
+                <td>Laboratorio ABC</td>
             </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td colspan="10"></td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Paracetamol</td>
-            <td>Jarabe</td>
-            <td>123</td>
-            <td>3.50</td>
-            <td>6</td>
-            <td>5</td>
-            <td>2025-09-15</td>
-            <td>22:00:00</td>
-            <td>Laboratorio ABC</td>
-        </tr>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 </div>
