--- a/Angular/src/app/inicio/inicio.html
+++ b/Angular/src/app/inicio/inicio.html
@@ -32,28 +32,33 @@
     <div>
         <span>&times;</span>
         <h3>Productos por Acabarse</h3>
-        <table>
-        <thead>
-            <tr>
-            <th>NOMBRE</th>
-            <th>STOCK</th>
-            <th>ESTADO</th>
-            <th>LABORATORIO</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Paracetamol</td>
-                <td>1</td>
-                <td>Critico</td>
-                <td>Laboratorio ABC</td>
-            </tr>
-            <tr>
-                <td colspan="4">No hay Productos con Bajos Stocks</td>
-            </tr>
-        
-        </tbody>
-        </table>
+        <div class="containerTabla">
+            <div>
+                
+            </div>
+            <table>
+            <thead>
+                <tr>
+                <th>NOMBRE</th>
+                <th>STOCK</th>
+                <th>ESTADO</th>
+                <th>LABORATORIO</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Paracetamol</td>
+                    <td>1</td>
+                    <td>Critico</td>
+                    <td>Laboratorio ABC</td>
+                </tr>
+                <tr>
+                    <td colspan="4">No hay Productos con Bajos Stocks</td>
+                </tr>
+            
+            </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
@@ -62,25 +67,27 @@
     <div>
         <span>&times;</span>
         <h3>Productos por Vencer X</h3>
-        <table>
-        <thead>
-            <tr>
-            <th>NOMBRE</th>
-            <th>LABORATORIO</th>
-            <th>FECHA VENCIMIENTO</th>
-            <th>DÍAS RESTANTES</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Azitromicina</td>
-                <td>Laboratorio ABC</td>
-                <td>21/04/2025</td>
-                <td>5 dias</td>
-            </tr>
-            <tr><td colspan="4">No hay productos por vencer en los próximos x días</td></tr>
-        </tbody>
-        </table>
+        <div class="containerTabla">
+            <table>
+            <thead>
+                <tr>
+                <th>NOMBRE</th>
+                <th>LABORATORIO</th>
+                <th>FECHA VENCIMIENTO</th>
+                <th>DÍAS RESTANTES</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Azitromicina</td>
+                    <td>Laboratorio ABC</td>
+                    <td>21/04/2025</td>
+                    <td>5 dias</td>
+                </tr>
+                <tr><td colspan="4">No hay productos por vencer en los próximos x días</td></tr>
+            </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
