--- a/React/Frontend/FarmaciaOasis/src/index.css
+++ b/React/Frontend/FarmaciaOasis/src/index.css
@@ -202,6 +202,20 @@
   margin: 0 !important;
 }
 
+/* FUENTES LETRAS */
+* {
+    font-family: 'Montserrat', sans-serif !important;
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+    
+}
+
+body {
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: 400;
+}
+
 /* ===== SISTEMA RESPONSIVE ===== */
 /* 
  * Breakpoints optimizados para móvil, tablet y desktop
