terminando de conectar la bd de ingresos-egresos

--- a/React/Frontend/FarmaciaOasis/src/modules/ingresos-egresos/ingresos-egresos.css
+++ b/React/Frontend/FarmaciaOasis/src/modules/ingresos-egresos/ingresos-egresos.css
@@ -112,9 +112,10 @@
 }
 
 /* Botón limpiar específico */
-.btn-limpiarIE {
+/*.btn-limpiarIE {*/
+
   /* Estilos específicos para el botón limpiar de ingresos-egresos */
-}
+
 
 /* Contenedor de estadísticas */
 .stats-container {
